# par-hash

./: Cargo.toml  README.md
src/: hashing.rs  main.rs  merkle_tree.rs  models.rs  progress_tracker.rs
src/hasher/: default.rs  md5.rs  mod.rs
src/input/: cli.rs  input.rs
src/util/: cli.rs  constants.rs  fs.rs  input.rs  math.rs  mod.rs
