[package]
name = "par-hash"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"

colored = "3.0.0"

rayon = "1.10.0"

hex = "0.4.3"

digest = "0.10.6"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"